# fahrradzukunft-pdf

./: collect.ipynb  extract_pages.ipynb  hello.py  playground.ipynb  pyproject.toml  styles.css
data/: links.yml
utils/: functions.py
