[project]
name = "fahrradzukunft-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.3",
    "pdfkit>=1.0.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "weasyprint>=63.1",
    "xhtml2pdf>=0.2.16",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nb-clean>=4.0.1",
    "ruff>=0.8.4",
]
